--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,9 +7,12 @@
     "setInterval": "установить",
     "def 25": "умлч:25",
     "defaultValue": "значение по умолчанию 25 мс..",
-    "selectedValue" : "мс установлено",
-    "black" : "Светлая",
-    "white" : "Тёмная",
-    "title" : "Проверьте вашу мышь, на баг двойного клика!",
-    "langs": "на Русский"
+    "selectedValue": "мс установлено",
+    "black": "Светлая",
+    "white": "Тёмная",
+    "title": "Проверьте вашу мышь, на баг двойного клика!",
+    "langs": "на Русский",
+    "readme": "Инструкция",
+    "descrFaq": "Двойное нажатие, или дабл-клик-баг. При одиночном клике срабатывает второй клик (технический баг, в основном проблема в переключателях, исправляется прошивкой, если есть поддержка со стороны производителя, в противном случае заменой переключателя). Баг проявляется от <b><. Значение по дефолту выставлено 25. Для проверки работоспособности приложения, выставьте среднее значение от 120++.",
+    "howItWorks" : "Как это работает?"
 }
