--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,6 +13,6 @@
     "title": "Проверьте вашу мышь, на баг двойного клика!",
     "langs": "на Русский",
     "readme": "Инструкция",
-    "descrFaq": "Двойное нажатие, или дабл-клик-баг. При одиночном клике срабатывает второй клик (технический баг, в основном проблема в переключателях, исправляется прошивкой, если есть поддержка со стороны производителя, в противном случае заменой переключателя). Баг проявляется от <b><. Значение по дефолту выставлено 25. Для проверки работоспособности приложения, выставьте среднее значение от 120++.",
+    "descrFaq": "Двойное нажатие, или дабл-клик-баг. При одиночном клике срабатывает второй клик (технический баг, в основном проблема в переключателях, исправляется прошивкой, если есть поддержка со стороны производителя, в противном случае заменой переключателя). Баг проявляется от 15 до 30мс. Значение по дефолту выставлено 25. Для проверки работоспособности приложения, выставьте среднее значение от 120++.",
     "howItWorks" : "Как это работает?"
 }
